--- a/assets/css/shoppingcart.css
+++ b/assets/css/shoppingcart.css
@@ -1,3 +1,8 @@
+
+:root{
+    --pink:#e84393;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -5,19 +10,25 @@ body {
     background-color: #f4f4f4;
 }
 
-.container {
+.container2 {
+    display: block;
     max-width: 800px;
-    margin: 20px auto;
+    margin: 100px auto;
     background-color: #fff;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    font-family: Arial, sans-serif;
+    margin-top: 100px;
+    justify-content: center;
+    align-items: center;
 }
 
 .cart {
     border: 1px solid #ddd;
     border-radius: 5px;
     padding: 10px;
+    background-color: white;
 }
 h1{
     text-align: center;
@@ -42,7 +53,7 @@ h1{
 }
 
 .remove1-btn {
-    background-color: palevioletred;
+    background-color: var(--pink);
     color: #fff;
     border: none;
     padding: 5px 10px;
@@ -63,7 +74,7 @@ h1{
 }
 
 .checkout-btn {
-    background-color: palevioletred;
+    background-color: var(--pink);
     color: #fff;
     border: none;
     padding: 5px 10px;
@@ -74,10 +85,12 @@ h1{
     max-width: 100px;
     display: inline-block;
     margin-top: 10px;
+    
 }
 
 .checkout-btn:hover {
-    background-color: pink;
+    background-color: var(--pink);
+    text-decoration: none;
 }
 .item-details h3 {
     margin: 0;
@@ -102,4 +115,3 @@ h1{
 .cart-total a{
     font-size: 14px;
 }
-
